Beautify prev & next buttons.

--- a/my-slider/index.html
+++ b/my-slider/index.html
@@ -29,8 +29,8 @@
           </h1>
         </li>
       </ul>
-      <button id="prev-btn">prev</button>
-      <button id="next-btn">next</button>
+      <button id="prev-btn"></button>
+      <button id="next-btn"></button>
     </div>
   </div>
 </body>
