Test ghost click.

--- a/my-slider/index.html
+++ b/my-slider/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div class="container">
+    <button id="ghost-click" style="display: inline-block; width: 200px; height: 100px;">Default</button>
     <div class="viewer">
       <ul class="slide-wraper">
         <li>
