Light button for switching pages.

--- a/my-slider/src/index.html
+++ b/my-slider/src/index.html
@@ -26,6 +26,7 @@
           </h1>
         </li>
       </ul>
+      <ul id="sliderButtons"></ul>
       <button id="prev-btn"></button>
       <button id="next-btn"></button>
     </div>
